<resources>
    <string name="app_name">Simple Gym Member Manage</string>

    <!--    shared preferences key-->
    <string name="shared_prefs_file_key_card_password">com.miroslav.simpleGymMemberManage.password</string>

    <!--    activity set defaults-->

    <string name="default_password">0</string>
    <string name="set_default_activity_name">Set Password</string>
    <string name="set_default_activity_password">Password</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="button_set_text">SET</string>
    <string name="button_active_text">ACTIVE CLIENTS</string>
    <string name="edit_text_search_text">Search ID</string>
    <string name="button_add_client_text">ADD CLIENT</string>
    <string name="button_add_card_text">ADD CARD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Fragment Add Card -->
    <string name="fragment_add_client_name_text">Add Client</string>
    <string name="fragment_add_card_name_text">Add Card</string>
    <string name="client_id_text">Client ID</string>
    <string name="cancel_text">Cancel</string>
    <string name="add_text">ADD</string>
    <string name="add_client_text">Add Client</string>
    <string name="client_name_hint">Client Name</string>
    <string name="client_added_text">Client added</string>
    <string name="client_text">Client</string>
    <string name="active_clients_text">Active Clients</string>
    <string name="set_default_activity_repeat_password">Repeat your Password</string>
    <string name="button_log_in">Log</string>
    <string name="log_in_activity_name_text">Log In</string>


</resources>



























