<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <RelativeLayout
        android:id="@+id/relativeLayoutMainMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imageButtonSearch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:src="@drawable/ic_baseline_search_24" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSearchClientId"
                android:hint="@string/edit_text_search_text"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLines="1"
                android:lines="1"

                android:maxLength="5"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonAddClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_client_text"
                android:padding="@dimen/button_main_menu_padding"
                android:layout_marginBottom="@dimen/button_add_client_margin"
                />

            <Button
                android:id="@+id/buttonAddCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_main_menu_padding"
                android:text="@string/button_add_card_text"
                android:layout_marginBottom="@dimen/button_add_client_margin"
                />

            <Button
                android:id="@+id/buttonActiveClients"
                android:padding="@dimen/button_main_menu_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_active_text"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>





















