<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/relativeLayout_margin"
        android:layout_marginLeft="@dimen/relativeLayout_margin"
        android:layout_marginRight="@dimen/relativeLayout_margin"
        tools:context=".LogInActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_activity_name_text"
            android:textSize="@dimen/edit_text_h1_size"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_add_client_margin"
            android:autofillHints="y@rP@ssw@rd"
            android:ems="10"
            android:hint="@string/set_default_activity_password"
            android:inputType="textPassword"
            android:maxLines="1"

            android:singleLine="true" />

        <Button
            android:layout_gravity="end"
            android:id="@+id/buttonLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linearLayoutMargin"
            android:layout_marginEnd="@dimen/linearLayoutMargin"
            android:text="@string/button_log_in" />


    </LinearLayout>
</layout>























